# tomato_sample_explainable_classifier

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: reproducible_run.yaml
data/: README.md
notebooks/: reproducible_pipeline.ipynb
scripts/: run_reproducible_pipeline.py  validate_reproducibility.py
src/tomato_classifier/: __init__.py
src/tomato_classifier/config/: __init__.py  loader.py  schema.py
src/tomato_classifier/data/: __init__.py  io.py  splits.py
src/tomato_classifier/evaluation/: __init__.py  metrics.py  reports.py
src/tomato_classifier/explainability/: __init__.py  decision_plots.py  force_plots.py  shap_utils.py
src/tomato_classifier/features/: __init__.py  artifacts.py  clustering.py
src/tomato_classifier/models/: __init__.py  registry.py  train.py
src/tomato_classifier/pipeline/: __init__.py  reproducible_run.py  validate.py
src/tomato_classifier/utils/: __init__.py  logging.py  paths.py  seeds.py
src/tomato_classifier/visualization/: __init__.py  correlation.py  dendrograms.py  performance.py  tree.py
tests/: test_feature_selection.py  test_models.py  test_performance_plots.py  test_reproducibility_validation.py  test_shap_shapes.py
tests/fixtures/: reference_metrics.json
